errors
mainwindow.cpp: In lambda function:
mainwindow.cpp:38:13: error: ‘this’ was not captured for this lambda function
   38 |             thermalManager.setThreshold(val);
      |             ^~~~~~~~~~~~~~
mainwindow.cpp:38:13: error: invalid use of non-static data member ‘MainWindow::thermalManager’
In file included from mainwindow.cpp:1:
mainwindow.h:41:26: note: declared here
   41 |     ThermalCameraManager thermalManager;
      |                          ^~~~~~~~~~~~~~
make: *** [makefile:37: mainwindow.o] Error 1
